# dpa_exercise1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.c
.cache/clangd/index/: main.c.B863532874D5DFC2.idx
